# CMakeList.txt : CMake project for ddos_cross_platform, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (ddos_cross_platform "ddos_cross_platform.cpp" "ddos_cross_platform.h")

# TODO: Add tests and install targets if needed.
